@@ -1,5 +1,4 @@
 package org.testng.internal.annotations;
 
 public interface IBeforeMethod extends IBaseBeforeAfter {
-
 }
