@@ -510,5 +510,12 @@
     <classes>
       <class name="test.retryAnalyzer.RetryAnalyzerTest" />
     </classes>
-  </test>  
+  </test>
+
+  <test name="InvocationCountFirstAndLastTime" >
+    <classes>
+      <class name="test.invocationcount.InvocationCountOnlyFirstTimeTest" />
+      <class name="test.invocationcount.InvocationCountOnlyFirstTimeVerifyTest" />
+    </classes>
+  </test>
 </suite>
